--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,7 @@
           <a class="nav-link" routerLink="/cart" routerLinkActive="active-link">
             <fa-icon [icon]="facart"></fa-icon>
           </a>
+          <span class="text-white bg-danger productcount">{{count}}</span>
         </li>
       </ul>
     </div>
