--- a/src/app/notfound/notfound.component.html
+++ b/src/app/notfound/notfound.component.html
@@ -1,3 +1,9 @@
-<div class="row align-items-center justify-content-center">
-    <h1>Not Found 404</h1>
+<div class="row">
+   <div class="col-xl-1 p-0">
+        <fa-icon [icon]="warningicon"></fa-icon>
+   </div>
+   <div class="col-xl-3 p-0">
+        <h1>Not Found 404</h1>
+   </div>
+    
 </div>
