--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -19,3 +19,20 @@
     width: 100%;
     z-index: 500;
 }
+.nav-item:last-child
+{
+    position: relative;
+}
+fa-icon
+{
+    font-size: 20px;
+}
+.productcount
+{
+    font-size: 12px;
+    padding: 0 5px;
+    border-radius: 15px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
