--- a/src/app/productcard/productcard.component.html
+++ b/src/app/productcard/productcard.component.html
@@ -1,13 +1,13 @@
-<div class="card" (click)="showDetails(productItem.id,productItem.category)">
+<div class="card" (click)="  showDetails (productItem.id)" >
   <div class="card-img">
-    <img [src]="productItem.imgsrc" class="card-img-top" alt="...">
-    <sub [style]="productItem.count|stocking|fontcolor">{{productItem.count|stocking}}</sub>
+    <img [src]="productItem.images[0]" class="card-img-top" alt="...">
+    <span class="avalability" [style]="productItem.stock|stocking|fontcolor">{{productItem.stock|stocking}}</span>
   </div>
   <div class="card-body">
-    <h5 class="card-title">{{productItem.name}}</h5>
+    <h5 class="card-title">{{productItem.title}}</h5>
     
-    <p class="card-text">{{productItem.category}}</p>
+    <p class="card-text">{{productItem.brand}}</p>
     <span id="prod-price">{{productItem.price}} EGP</span>
-    <a href="#" class="btn addtocart">Add To Cart</a>
+    <a class="btn addtocart" (click)="addtocart($event)">Add To Cart</a>
   </div>
 </div>
