Turn the product project to furniture ecommerce project getting the data from api created by me in the mockapi

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <fa-icon [icon]="facoffe"></fa-icon> -->
 <app-navbar></app-navbar>
+<app-newsbar></app-newsbar>
 <main>
   <router-outlet></router-outlet>
 </main>
