--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -8,7 +8,7 @@
         <div class="col-xl-6 p-0">
             <div class="prodInfo">
                 <div class="card-head">
-                    <h1 class="prodtitle">{{productItem?.title}}</h1>
+                    <h1 class="prodtitle">{{productItem?.Name}}</h1>
                     <span class="availability"
                         [style]="productItem?.stock|stocking|fontcolor">{{productItem?.stock|stocking}}</span>
                 </div>
