--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 main
 {
-    padding: 70px 0;
+    /* padding: 70px 0; */
     /* background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
