--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark align-items-center">
+<nav class="navbar navbar-expand-lg navbar-dark align-items-center">
     <a class="navbar-brand" href="#">
-      <img id="logo" src="https://seeklogo.com/images/F/food-logo-59E5A73AFD-seeklogo.com.png">
+      <img id="logo" src="../../assets/Images/Logo/logo.png">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="" routerLinkActive="active-link" >Products</a>
+          <a class="nav-link" routerLink="" routerLinkActive="active-link" >Home  </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/products" routerLinkActive="active-link" >Products</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/register" routerLinkActive="active-link">Register</a>
@@ -16,7 +19,21 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/login" routerLinkActive="active-link">Login</a>
         </li>
+        <span class=" dropdown">
+          <button class="btn nav-link " href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-circle-half-stroke"></i> 
+              <p>Theme</p>
+          </button>
+          <div class="dropdown-menu dropdown-mode">
+            <button class="btn lightmode" href="#"><i class="fa-solid fa-sun"></i> Light</button>
+            <button class="btn darkmode" href="#"><i class="fa-solid fa-moon"></i> Dark</button>
+          </div>
+      </span>
       </ul>
+      <div class="searchbox">
+        <button class="btn searchbtn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <input type="text" placeholder="Search">
+      </div> 
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart" routerLinkActive="active-link">
@@ -25,5 +42,7 @@
           <span class="text-white bg-danger productcount">{{count}}</span>
         </li>
       </ul>
+     
     </div>
   </nav>
+
