--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <fa-icon [icon]="facoffe"></fa-icon> -->
 <app-navbar></app-navbar>
+<app-lightning></app-lightning>
 <app-newsbar></app-newsbar>
 <main>
   <router-outlet></router-outlet>
