--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="p-70 bg-dark">
+<footer class="p-70">
     <div class="container">
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
