--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@ body
 }
 main
 {
-    min-height: 55vh;
+    /* min-height: 55vh; */
+    background-color: var(--mode);
     overflow: hidden;
 }
 img
