update the header style

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,18 @@
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-6">
+        <h1>Furniture At Cost</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, distinctio odit? Molestiae debitis dolore
+          repellat natus eveniet itaque quasi doloribus accusamus, similique magnam aliquam incidunt, voluptas fugit
+          voluptatum, asperiores laborum!</p>
+        <button class="btn">Rent </button>
+        <button class="btn">Buy </button>
 
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-6">
-          <div id="carouselExampleCaptions" class="carousel slide" >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../../assets/Images/1.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="../../assets/Images/2.png" class="d-block w-100" alt="...">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-6">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. At ipsum est similique sint placeat voluptas officiis, quisquam dignissimos obcaecati autem excepturi dicta nihil quas libero culpa veniam eius, repellendus assumenda.
-          </p>
-        </div>  
+      </div>
+      <div class="col-xl-6">
+        <img src="../../assets/Images/1.png">
       </div>
     </div>
-  </header>
+  </div>
+</header>
