--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,67 +1,29 @@
-/* .carousel img , .carousel video{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+header{
+    background-color: rgb(249 209 84 / 57%);
 }
-.carousel{
-    height: 82.8vh;
-}
-.carsoule-item, .carousel-inner , .carousel-item.active , .owl-carousel  , .owl-stage-outer , .owl-stage , .owl-item{
-    height: 100%;
-}
-.carsoule-item{
-    position: relative;
-}
-.text-overlay{
-    display: flex;
-    text-align: center;
-    align-items: center;
-	width: fit-content;
-	margin: auto;
-    font-size: 30px;
-    position: absolute;
-    font-family: 'Courier New', Courier, monospace;
-    inset: 0;
-    z-index: 100;
-}
-.text-overlay , .text-overlay .btn{
-    color: white;
-    text-transform: uppercase;
-}
-.text-overlay h1{
-    font-size: 50px;
-    text-transform: capitalize;
-}
-.text-overlay .btn{
-    font-size: 20px;
-    font-weight: 500;
-   font-family:sans-serif;
-    backdrop-filter: blur(10px);
-    border: 2px solid white;
-    margin-top: 12px;
-}
-.item::after{
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-color: rgba(0, 0, 0, 0.355);
-}
-.img-overlay{
-    position: absolute;
-    inset: 0;
-
-}
-.owl-carousel.owl-drag .owl-item {
-    width: 98.9vw  !important;
-} */
-/* header{
-    height: 50vh;
-} */
 header .row{
-    height: 50vh;
+    height: 55vh;
     align-items: center;
     color: var(--fontcolor);
 }
 header .row img{
     border-radius: 10px;
+}
+h1{
+    font-size: 58px;
+    font-family: fangsong;
+    font-weight: 800;
+    width: 50%;
+}
+p{
+    font-size: 18px;
+}
+.btn{
+    background-color: orange;
+    border-radius: 20px;
+    padding: 5px 15px;
+    font-size: 16px;
+    text-transform: capitalize;
+    border: 2px solid black;
+    margin: 0 6px;
 }
