--- a/src/app/lightning/lightning.component.css
+++ b/src/app/lightning/lightning.component.css
@@ -3,6 +3,8 @@
     position: fixed;
     z-index: 100;
     top: 0;
+    right: 0;
+
     transition: all 0.5s;
 }
 #cord{
@@ -10,6 +12,7 @@
     position: fixed;
     z-index: 100;
     top:-10px;
+    right: 0;
     transition: all 0.2s;
     cursor: pointer;
 }
