--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,19 @@
 <app-header></app-header>
+<div class="container p-5">
+    <h1>Popular products</h1>
+    <div class="categories">
+        <ul class="d-flex ">
+            <li>CHAIR</li>
+            <li>TABLE</li>
+            <li>TABLE</li>
+            <li>COACHE</li>
+            <li>TABLE</li>
+
+        </ul>
+    </div>
+    <div class="d-flex">
+        <img src="../../assets/Images/image74669-removebg-preview.png">
+        <img src="../../assets/Images/image88982-removebg-preview.png">
+
+    </div>
+</div>
