--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -3,7 +3,8 @@
     position: relative;
     z-index: 1;
 }
-.closed::before{
+
+.closed::before {
     content: "";
     left: 0;
     right: 0;
@@ -13,6 +14,7 @@
     position: absolute;
     z-index: -1;
 }
+
 :host {
 
     height: 100%;
@@ -25,12 +27,13 @@
     right: 0;
     bottom: 0;
     height: 50%;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.44) 50% , rgba(0, 0, 0, 0.17) 50%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.44) 50%, rgba(0, 0, 0, 0.17) 50%);
 }
 
-#signin-window ,#signup-window{
+#signin-window,
+#signup-window {
     height: 70vh;
-    border-radius:40%
+    border-radius: 40%
 }
 
 
@@ -39,12 +42,11 @@
     height: 100%;
     object-fit: cover;
     z-index: -2;
-    position:absolute;
+    position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
     height: 50%;
-    /* background: url(<path-to-image>), lightgray 50% / cover no-repeat; */
 }
 
 input {
@@ -52,24 +54,28 @@ input {
     border: 1px solid #C2C2C3;
     background: #F5F3F3;
 }
-input [type="text"]:focus{
+
+input [type="text"]:focus {
     appearance: none;
     box-shadow: none;
     background: #F5F3F3;
     border: 1px solid #C2C2C3;
 }
+
 .title {
     font-family: Abhaya Libre;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     width: fit-content;
     margin-bottom: 30px;
 }
-.title h1{
+
+.title h1 {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
 }
-.special-btn{
+
+.special-btn {
     border-radius: 22px;
     border: 1px solid #484848;
     background: #484848;
@@ -83,27 +89,36 @@ input [type="text"]:focus{
     display: block;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 104.348% */
+    line-height: 24px;
     letter-spacing: 0.92px;
 }
-.signQ{
-    color: #000;
-font-family: Abhaya Libre ExtraBold;
-font-size: 35px;
 
-font-style: normal;
-font-weight: 800;
-line-height: normal;
+.signQ {
+    color: var(--mode);
+    font-family: Abhaya Libre ExtraBold;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
 }
-.signQ::first-letter{
-    color: #FFF;
-font-family: Abhaya Libre ExtraBold;
-font-size: 45px;
-font-style: normal;
-font-weight: 800;
 
-line-height: normal;
+.signQ::first-letter {
+    color: var(--fontcolor);
+    font-family: Abhaya Libre ExtraBold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
 }
-.signinbtn{
-
+.error-msg{
+    display: flex;
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right: 10px;
+    background: transparent;
+    align-items: center;
+    color: #d50909;
+    font-size: 25px;
+    font-weight: 500;
 }
