--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,12 @@ body
     min-height: 100vh;
     display: flex;
     background-color: var(--mode);
-    /* width: 100%; */
 }
 main
 {
     padding: 70px 0;
     min-height: 55vh;
-    height: 80vh;
-    /* overflow: hidden; */
+    height: fit-content;
 }
 img
 {
@@ -22,5 +20,6 @@ img
     --mode:black;
     --sliderwidth:-40px;
     --window-width:1536px;
+    --bordercolor:rgba(255, 255, 255, 0.249)
 }
 
